2008-07-31  Johan Dahlin  <johan@flumotion.com>

	* data/glade/sectionwizard.glade:
	* flumotion/ui/wizard.py:
	Add a finish button, and always show and make it
	sensitive iff it wizard can be finished.

2008-07-31  Johan Dahlin  <johan@flumotion.com>

	* data/Makefile.am:
	* data/image/Makefile.am:
	* flumotion/admin/gtk/dialogs.py:
	* flumotion/ui/icons.py:
	* flumotion/ui/simplewizard.py:
	* flumotion/ui/trayicon.py:
	* flumotion/ui/wizard.py:
	Update the icons, use the flumotion icon everywhere.

2008-07-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile.am:
	  pychecker more.
	* flumotion/monitor/nagios/process.py:
	  Fix a pychecker complaint.

2008-07-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/registry.py:
	  Also handle _description for compound-property.
	* flumotion/component/bouncers/bouncer.xml:
	* flumotion/component/bouncers/htpasswdcrypt.xml:
	* flumotion/component/bouncers/icalbouncer.xml:
	* flumotion/component/bouncers/ipbouncer.xml:
	* flumotion/component/bouncers/saltsha256.xml:
	* flumotion/component/bouncers/tokentest.xml:
	* flumotion/component/combiners/composite/composite.xml:
	* flumotion/component/combiners/switch/switch.xml:
	* flumotion/component/consumers/disker/disker.xml:
	* flumotion/component/consumers/gdp/gdp.xml:
	* flumotion/component/consumers/httpstreamer/httpstreamer.xml:
	* flumotion/component/consumers/preview/preview.xml:
	* flumotion/component/consumers/shout2/shout2.xml:
	* flumotion/component/converters/overlay/overlay.xml:
	* flumotion/component/converters/pipeline/pipeline.xml:
	* flumotion/component/encoders/dirac/dirac.xml:
	* flumotion/component/encoders/jpeg/jpeg.xml:
	* flumotion/component/encoders/mulaw/mulaw.xml:
	* flumotion/component/encoders/smoke/smoke.xml:
	* flumotion/component/encoders/speex/speex.xml:
	* flumotion/component/encoders/theora/theora.xml:
	* flumotion/component/encoders/vorbis/vorbis.xml: